fix data display

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -102,7 +102,7 @@ experiences:
         - **Automatización:** Creación de un arquetipo Maven para agilizar el inicio de nuevos proyectos.        
       technologies: Java 7, Hibernate, Spring MVC, JavaScript, jQuery, JSP/JSTL, REST, SQL, Eclipse Juno/Oxygen, Visual Studio, Jira, RTC, Git, Jenkins
     - role: Desarrollador Java Fullstack
-      time: 2015 - Septiembre 2017
+      time: 2015 - 2017
       company: Setting Consultoría para el cliente Banc de Sang i Teixits (Sanidad)
       details: |
         - **Análisis y Diseño:** Toma de requisitos y diseño de soluciones de arquitectura.
