--- a/_data/data.yml
+++ b/_data/data.yml
@@ -4,16 +4,16 @@ sidebar:
   education: True # set to False if you want education in the main section instead of in the sidebar
 
   # Profile information
-  name: [ Albert Hernández Plaza ]
+  name: [ Juan Manuel Gómez Varela ]
   tagline: Full Stack Developer<BR>(Java - JS - React) <i class="fa-solid fa-laptop-code"></i>
-  avatar: albert.webp  # place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+  avatar: profilePic.webp  # place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
   # Sidebar links
-  email: [ ahernandezplaza@gmail.com ]
-  location: Barcelona, Spain
+  email: [ jmgomezvarela@gmail.com ]
+  location: Calafell, Spain
   timezone: Europe/Madrid
-  linkedin: [ ahernandezplaza ]
-  github: [ jercollini ] 
+  linkedin: [ jmgomezvarela ]
+  github: [ jmgomezvarela ] 
   pdf: print pdf :)
 
   languages:
@@ -22,62 +22,63 @@ sidebar:
       - idiom: Spanish
         level: Native
 
-      - idiom: Catalan
-        level: Native
-
       - idiom: English
         level: Professional
+
+      - idiom: Catalan
+        level: B2
+
+      - idiom: French
+        level: A2
 
   interests:
     title: Interests
     info:
       - item: Indoor climbing
 
-      - item: Diving and snorkeling
+      - item: Surf
 
-      - item: Gaming
+      - item: Running
 
-      - item: Cooking
+      - item: Chess
 
   additional-info:
     title: Additional Information
     info:
       - item: Competencies - Responsibility, interpersonal skills, and public speaking.
-      - item: Licenses - B and A2 driver's licenses.
-      - item: Own vehicle - Car and motorcycle.
+      - item: Licenses - B and A2 driver's licenses. 
 
 
 career-profile:
   title: Professional Profile
   summary: |
-    Full Stack Developer passionate about technology with a strong interest in the latest web development trends.<BR><BR>
-    Experience in creating scalable and high-performance applications for the medical and insurance sectors. <BR><BR>
-    Proficient in Java, JS, React, and agile methodologies. Constantly updating my knowledge to offer innovative and cutting-edge solutions.
+    Software Engineer with degree and more than 15 years experience on development industry, 
+    full stack developer passionate about technology with a strong interest in the latest web development trends who loves building products that helps people. <BR><BR>
+    Currently creating scalable and high-performance applications for the medical and insurance sectors.<BR><BR>
+    I like clean code and work in-proving my Java skills but I don't forget to keep learning to remain updated, e.g. Nowdays learning React. 
+    .<BR><BR>
+ 
 
 education:
   title: Education
   info:
-    - degree: Bachelor's Degree in Computer Engineering
-      university: Universitat Oberta de Catalunya
-      time: 2013 - Present
-      details: |
-        50% of the degree completed
-    - degree: Advanced Vocational Training in Software Development
-      university: C.E. Roca
-      time: 2007 - 2009
-    - degree: Advanced Vocational Training in Systems Administration
-      university: C.E. Roca
-      time: 2007 - 2009
-    - degree: Intermediate Vocational Training in IT Systems Operation
-      university: Escola Bemen 3
-      time: 2005 - 2007
+
+
+    - degree: Informatics & software Engineer, License IT 2022/QOS682, 
+      university: SPANISH MINISTRY of EDUCATION  (www.educacion.es)
+      time: 2023
+      details: Degree recognized by Spanish ministry of education as equivalent to Master in system information Engineering
+    - degree: Master in system information Engineering
+      university: UNIVERSIDAD ARGENTINA JOHN F. KENNEDY (www.kennedy.edu.ar)
+      time: 2013
+      details: Distinguished Thesis Food waste management application with Android and QR technologies.
 
 experiences:
   title: Professional Experience
   info:
     - role: Fullstack Software Engineer
       time: 2019 - Present
-      company: Stacks for Cegedim Santé
+      company: STACKS for Cegedim Santé
       details: |
         As a **Fullstack Engineer**, I am an integral part of the team responsible for the **management and continuous improvement** of *Mon Logiciel Médical*. I work closely with designers, product owners, and other developers to deliver innovative solutions that meet the needs of healthcare professionals.
 
@@ -88,42 +89,48 @@ experiences:
         - **Code Quality:** Ensuring that each delivery meets the highest quality standards.
         - **End-User Satisfaction:** Ensuring a smooth and optimal user experience.
         - **Mentorship:** Supporting new team members, promoting knowledge sharing, and best development practices.
-      technologies: React, Java 7 8 17, Hibernate, Springboot, JavaScript, jQuery, JSP, REST, Oracle, IntelliJ, Visual Studio, Jira, Kubernetes, Git, Jenkins
-    - role: Fullstack Java Developer
-      time: 2017 - 2019
-      company: Sopra Steria for Allianz
-      details: |
+      technologies: React, Java ver 8 and 17, Hibernate, Springboot, JavaScript, jQuery, JSP, REST, Oracle, IntelliJ, Visual Studio, Jira, Kubernetes, Git, Jenkins
+  
+    - role: Senior Java developer
+      time: 2016 - 2019
+      company: BNP PARIBAS
+      details:  Responsible for tho analysis, technical design, davelopmont and implementation of new projects. Maintenance of organizational portals. 
         - **Agile Development:** Active participation in Scrum teams for web application development.
         - **Continuous Improvement:** Proactive incident management and optimization of existing applications.
         - **Automation:** Created a Maven archetype to streamline the start of new projects.
-      technologies: Java 7, Hibernate, Spring MVC, JavaScript, jQuery, JSP/JSTL, REST, SQL, Eclipse Juno/Oxygen, Visual Studio, Jira, RTC, Git, Jenkins
-    - role: Fullstack Java Developer
-      time: 2015 - 2017
-      company: Setting Consultoría for Banc de Sang i Teixits (Healthcare)
+      technologies: Java 8, Hibernate, Spring MVC, JavaScript, jQuery, JSP/JSTL, REST, SQL, Eclipse Juno/Oxygen, Visual Studio, Jira, RTC, Git, Jenkins
+
+    - role: Team leader of Support & integration Team 
+      time: 2016 - 2012
+      company: PAYU latam
       details: |
+        - Functional support, tech product's integrations. Team leader of support and Integrations team (5 devs).
         - **Analysis and Design:** Requirement gathering and architecture solution design.
         - **Backend Development:** Developed backend components using Struts2, Spring, Hibernate, and other technologies.
         - **Frontend Development:** Designed and developed user interfaces using JSF, PrimeFaces, and JavaScript.
         - **Optimization:** Performance improvement and issue resolution in existing applications.
-      technologies: Java 4/7, Struts 1.1, Spring, Hibernate, JPA, JSF, PrimeFaces, JavaScript, PL/SQL, eProgesa, Oracle, Eclipse Luna/Neon
-    - role: Remote IT Support
-      time: 2010 - 2015
-      company: Costaisa for Asepeyo
-    - role: IT Support/Helpdesk
-      company: Uniland Cementera S.A.
-      time: 2008 - 2009
-    - role: IT Support/Helpdesk
-      company: Telefónica Soluciones
-      time: 2007 - 2008
-    - role: IT Support
-      company: Sede del Poder Judicial de Barcelona (C.G.P.J.)
-      time: 2007
-    - role: Network Maintenance and Administration Technician
-      company: Disvirtual S.L.
-      time: 2007
-    - role: Peripherals Repair Technician for Taxis
-      company: Taxímetros Barcino S.L.
-      time: 2006 - 2008
+      technologies: ASP, PJJP, Java 8, .Net.
+   
+    - role: Java team leader 
+      time: 2012 - 2010
+      company: CAPGEMINI
+      details: |
+        - Tasks: Team leader of a team of 4 devs in charge of the maintenance and migration to Java of an application built with ASP technologies. 
+      technologies: Java/J2EE/JSF/iBatis/Spring/.Javascript/PL SQL.
+
+    - role: Systems analyst Java programmer
+      time: 2010 - 2008
+      company: AYI Group
+      details: |
+        - Tasks: Java developments, Queries at PL/SQL, creation of solutions with oracle BPBL. Developments with sugar CRM. 
+      technologies: Java, ADF (Oracle Application Development Framework), OSB, PHP, PL/SQL, SOAP web services.
+
+    - role: Junior web developer
+      time: 2008 - 2007
+      company: WEBAR INTERACTIVE
+      details: |
+        - Tasks: Developed custom websites for clients based on specific requirements and brand guidelines, collaborating closely with designers and account managers to ensure high-quality results. 
+      technologies: PHP, ASP, HTML, CSS, Javascript, SQL server, MySQL.
 
 
 skills:
@@ -137,7 +144,7 @@ skills:
       level: 98%
     
     - name: React
-      level: 80%
+      level: 60%
 
     - name: HTML5 & CSS
       level: 95%
